# dive-into-embodied-ai

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README copy.md  README.md  STRUCTURE_REFACTOR_NOTES.md  docusaurus.config.ts  local-build.sh  local-start.sh  package-lock.json  package.json  sidebars.ts
codes/practices/quadruped/cs123/exercises/: .gitignore  README.md  pyproject.toml
codes/practices/quadruped/cs123/exercises/lab_1_pid_bode/: README.md  make_artifacts.py  starter.py  starter_todo.py  tests.py
codes/practices/quadruped/cs123/exercises/lab_2_fk_teleop/: README.md  make_artifacts.py  starter.py  starter_todo.py  tests.py
codes/practices/quadruped/cs123/exercises/lab_3_stepping/: README.md  make_artifacts.py  starter.py  starter_todo.py  tests.py
codes/practices/quadruped/cs123/exercises/lab_4_urdf_surgery/: README.md  make_artifacts.py  starter.py  starter_todo.py  tests.py
codes/practices/quadruped/cs123/exercises/lab_5_gait_zoo/: README.md  make_artifacts.py  starter.py  starter_todo.py  tests.py
codes/practices/quadruped/cs123/exercises/lab_6_rl_pupper/: README.md  callbacks.py  eval_commands.py  make_artifacts.py  requirements-mjx.txt  starter.py  starter_todo.py  tests.py  train_brax_ppo.py  train_ppo.py
codes/practices/quadruped/cs123/exercises/lab_7_llm_control/: .env.example  .gitignore  README.md  eval_tasks.py  make_artifacts.py  starter.py  starter_todo.py  tests.py
codes/practices/quadruped/cs123/exercises/lab_8_ball_chase/: .gitignore  README.md  eval_chase.py  make_artifacts.py  starter.py  starter_todo.py  tests.py
(+166 files in other folders)
