[project]
name = "cs123-exercises"
version = "0.1.0"
description = "CS123 MuJoCo companion Lab"
requires-python = ">=3.12"
dependencies = [
    "imageio>=2.37.0",
    "matplotlib>=3.10.8",
    "mujoco>=3.7.0",
    "numpy>=2.4.4",
    "opencv-python>=4.8",
    "openai>=1.54.3",
    "pillow>=12.0.0",
    "python-dotenv>=1.0.1",
    "stable-baselines3>=2.3.0",
    "tensorboard>=2.16",
]
